서비스 로직 수정 및 통합테스트코드 완료